[package]
name = "fula-local-gateway"
version = "0.1.0"
edition = "2021"
description = "Local S3 gateway for FxBlox devices"

[[bin]]
name = "fula-gateway"
path = "src/main.rs"

[dependencies]
# Shared fula-api crates (from committed main branch)
fula-blockstore = { git = "https://github.com/functionland/fula-api.git", branch = "main" }
fula-core = { git = "https://github.com/functionland/fula-api.git", branch = "main" }

# Web framework
axum = { version = "0.8", features = ["multipart", "tokio"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
hyper = { version = "1.5", features = ["full"] }

# Async + serialization
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cid = "0.11"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
hex = "0.4"
blake3 = "1.5"
dashmap = "6.1"
clap = { version = "4.5", features = ["derive", "env"] }
